--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -105,7 +105,7 @@
     padding-left: var(--unit-xl);
   }
 
-  .pill-2 {
+  input.pill-2 {
     border-radius: 0 var(--unit-infinity) var(--unit-infinity) 0;
   }
 }
